Upgrade from ints to longs, and move into packages